News portal implementation * Create OpenAPI Specification Files * Configure OpenAPI Code Generation * Create Domain Models * Create Entity-to-Model Mappers * Create API Model-to-Domain Model Mappers * Refactor Services * Implement Controller Interfaces * Update Error Handling * Update Tests

--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,11 @@
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.3.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.openapitools</groupId>
+            <artifactId>jackson-databind-nullable</artifactId>
+            <version>0.2.6</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -109,6 +114,78 @@
                         <compilerArg>-Amapstruct.defaultComponentModel=spring</compilerArg>
                     </compilerArgs>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.openapitools</groupId>
+                <artifactId>openapi-generator-maven-plugin</artifactId>
+                <version>7.2.0</version>
+                <executions>
+                    <!-- News API -->
+                    <execution>
+                        <id>generate-news-api</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <inputSpec>${project.basedir}/src/main/resources/openapi/news-api.yaml</inputSpec>
+                            <generatorName>spring</generatorName>
+                            <apiPackage>com.dev.news.newsportal.api.news</apiPackage>
+                            <modelPackage>com.dev.news.newsportal.api.model.news</modelPackage>
+                            <configOptions>
+                                <interfaceOnly>true</interfaceOnly>
+                                <useSpringBoot3>true</useSpringBoot3>
+                                <useJakartaEe>true</useJakartaEe>
+                                <skipDefaultInterface>true</skipDefaultInterface>
+                                <useTags>true</useTags>
+                                <dateLibrary>java8</dateLibrary>
+                            </configOptions>
+                        </configuration>
+                    </execution>
+                    
+                    <!-- Users API -->
+                    <execution>
+                        <id>generate-users-api</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <inputSpec>${project.basedir}/src/main/resources/openapi/users-api.yaml</inputSpec>
+                            <generatorName>spring</generatorName>
+                            <apiPackage>com.dev.news.newsportal.api.users</apiPackage>
+                            <modelPackage>com.dev.news.newsportal.api.model.users</modelPackage>
+                            <configOptions>
+                                <interfaceOnly>true</interfaceOnly>
+                                <useSpringBoot3>true</useSpringBoot3>
+                                <useJakartaEe>true</useJakartaEe>
+                                <skipDefaultInterface>true</skipDefaultInterface>
+                                <useTags>true</useTags>
+                                <dateLibrary>java8</dateLibrary>
+                            </configOptions>
+                        </configuration>
+                    </execution>
+                    
+                    <!-- Comments API -->
+                    <execution>
+                        <id>generate-comments-api</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <inputSpec>${project.basedir}/src/main/resources/openapi/comments-api.yaml</inputSpec>
+                            <generatorName>spring</generatorName>
+                            <apiPackage>com.dev.news.newsportal.api.comments</apiPackage>
+                            <modelPackage>com.dev.news.newsportal.api.model.comments</modelPackage>
+                            <configOptions>
+                                <interfaceOnly>true</interfaceOnly>
+                                <useSpringBoot3>true</useSpringBoot3>
+                                <useJakartaEe>true</useJakartaEe>
+                                <skipDefaultInterface>true</skipDefaultInterface>
+                                <useTags>true</useTags>
+                                <dateLibrary>java8</dateLibrary>
+                            </configOptions>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
