News portal - refactoring * Implement Proper Logging Framework * Fix OSIV Configuration Consistency * Implement Configuration Properties Classes * New jUnit tests

--- a/src/main/resources/application-pgsql.properties
+++ b/src/main/resources/application-pgsql.properties
@@ -11,6 +11,8 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+# Disable Open Session in View to prevent N+1 query issues
+spring.jpa.open-in-view=false
 
 # Flyway Configuration
 spring.flyway.enabled=true
