--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.application.name=news-portal
 
+# News Portal Configuration Properties
+news-portal.database.max-connections=20
+news-portal.security.jwt-secret=${JWT_SECRET:default-secret}
+
 # H2 Database Configuration
 spring.datasource.url=jdbc:h2:mem:newsdb
 spring.datasource.driverClassName=org.h2.Driver
