--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,19 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=false
+
+# RabbitMQ Configuration
+spring.rabbitmq.host=${RABBITMQ_HOST:localhost}
+spring.rabbitmq.port=${RABBITMQ_PORT:5672}
+spring.rabbitmq.username=${RABBITMQ_USERNAME:admin}
+spring.rabbitmq.password=${RABBITMQ_PASSWORD:admin123}
+spring.rabbitmq.virtual-host=${RABBITMQ_VHOST:/}
+spring.rabbitmq.publisher-confirm-type=correlated
+spring.rabbitmq.publisher-returns=true
+
+# News Portal RabbitMQ Configuration - Simplified for publishing only
+news-portal.rabbitmq.exchanges.news.exchange=exchange.news
+news-portal.rabbitmq.exchanges.news.binding.created.key=news.created
+news-portal.rabbitmq.exchanges.news.binding.updated.key=news.updated
+news-portal.rabbitmq.exchanges.comments.exchange=exchange.comments
+news-portal.rabbitmq.exchanges.comments.binding.created.key=comments.created
